--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon ./src/index.js"
+		"start": "node ./src/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
-		"nodemon": "^3.0.1"
-	},
+	"devDependencies": {},
 	"dependencies": {
 		"axios": "^1.6.2",
 		"cors": "^2.8.5",
